Patrick offset tool

--- a/vc/vc.html
+++ b/vc/vc.html
@@ -67,7 +67,11 @@
     <li><a href="tools/Super SSA Checklist 2.exe">Super SSA Checklist by Lighnat0r</a></li>
 </ul></nav>
 
-<h3>Modding References</h3>
+<h3>Modding</h3>
+<h4>Tools</h4>
+<nav style="border-style: none;"><ul>
+    <li><a href="tools/add-local-offsets-to-global-debug-offsets.zip">Local offset adder tool by Patrick</a> (pass it a <a target="_blank" href="https://public.sannybuilder.com/archive/SannyBuilder-v3.4.1.exe">Sanny</a>-decompiled SCM with the global offsets per-line using the CODE_OFFSETS setting)</a></li>
+</ul></nav>
 <h4>SCM decompiles</h4>
 <nav style="border-style: none;"><ul>
     <li><a href="mods/scm/green-pepper.txt">Green Pepper</a></li>
